Name:                fix-symbols-gitit
Version:             0.1.2
Cabal-Version:       >= 1.2
Synopsis:            Gitit plugin: Turn some Haskell symbols into pretty math symbols.
Category:            Text
Description:
  Gitit plugin: Turn some Haskell symbols into pretty math symbols.
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2010 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Package-Url:         http://github.com/conal/fix-symbols-gitit

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, containers, gitit >= 0.7.3.12
  Exposed-Modules:     
                       Network.Gitit.Plugin.FixSymbols

-- experiment in haddock + gitit. Add the following
--   Exposed-Modules:
--                        Network.Gitit.Plugin.Foo
                       
  ghc-options:         -Wall
